adapt to run AuthParams with java 7